docs: add documentation for update user handler
